main/zcode/parser/.antlr/ZCodeParser.py
# Generated from c:/Users/Admin/Documents/HK232/PPL/Assignment2/src/main/zcode/parser/ZCode.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ZCodeParser ( Parser ):

    grammarFileName = "ZCode.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'return'", "'var'", "'dynamic'", 
                     "'func'", "'for'", "'until'", "'by'", "'break'", "'continue'", 
                     "'if'", "'else'", "'elif'", "'begin'", "'end'", "'number'", 
                     "'boolean'", "'string'", "'=='", "'...'", "'<-'", "'>='", 
                     "'>'", "'<='", "'<'", "'!='", "'='", "'or'", "'and'", 
                     "'not'", "'%'", "'+'", "'-'", "'*'", "'/'", "'true'", 
                     "'false'", "'('", "')'", "'['", "']'", "','", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'\\n'" ]

    symbolicNames = [ "<INVALID>", "COMMENT", "RETURN_KEY", "VAR_KEY", "DYNAMIC_KEY", 
                      "FUNC_KEY", "FOR_KEY", "UNTIL_KEY", "BY_KEY", "BREAK_KEY", 
                      "CONTINUE_KEY", "IF_KEY", "ELSE_KEY", "ELIF_KEY", 
                      "BEGIN_KEY", "END_KEY", "NUM_TYPE", "BOOL_TYPE", "STRING_TYPE", 
                      "EQUAL_OPERATOR", "CONCAT_OPERATOR", "ASSIGN1_OPERATOR", 
                      "GE_OPERATOR", "G_OPERATOR", "LE_OPERATOR", "L_OPERATOR", 
                      "NE_OPERATOR", "ASSIGN2_OPERATOR", "OR_OPERATOR", 
                      "AND_OPERATOR", "NOT_OPERATOR", "MODULO_OPERATOR", 
                      "ADD_OPERATOR", "SUB_OPERATOR", "MUL_OPERATOR", "DIV_OPERATOR", 
                      "TRUE_BOOLEAN", "FALSE_BOOLEAN", "LB", "RB", "LSB", 
                      "RSB", "COMMA", "ID", "NUMBER", "STRINGLIT", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "NEW_LINE", "WS", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decllist = 1
    RULE_decl = 2
    RULE_vardecl = 3
    RULE_typdecl = 4
    RULE_varkeydecl = 5
    RULE_dynamicdecl = 6
    RULE_funcdecl = 7
    RULE_arraydecl = 8
    RULE_arrayparameter = 9
    RULE_arrayvalue = 10
    RULE_arrayval = 11
    RULE_arrayvallist = 12
    RULE_listarrayval = 13
    RULE_sizelist = 14
    RULE_statement = 15
    RULE_stmtlist = 16
    RULE_blockstmt = 17
    RULE_funccallstmt = 18
    RULE_returnstmt = 19
    RULE_continuestmt = 20
    RULE_forstmt = 21
    RULE_breakstmt = 22
    RULE_ifstmt = 23
    RULE_eliflist = 24
    RULE_elifcomponent = 25
    RULE_assignstmt = 26
    RULE_relationaloperator = 27
    RULE_logicoperator = 28
    RULE_arithmeticoperator = 29
    RULE_expr = 30
    RULE_expr1 = 31
    RULE_expr2 = 32
    RULE_expr3 = 33
    RULE_expr4 = 34
    RULE_expr5 = 35
    RULE_expr6 = 36
    RULE_expr7 = 37
    RULE_expr8 = 38
    RULE_subexpr = 39
    RULE_indexoperator = 40
    RULE_indexope = 41
    RULE_argumentlist = 42
    RULE_argumentprime = 43
    RULE_argument = 44
    RULE_literal = 45
    RULE_booleanvalue = 46
    RULE_numbervariable = 47
    RULE_newlinelist = 48
    RULE_newlinelistnonull = 49
    RULE_lhs = 50
    RULE_indexexpr = 51
    RULE_index = 52
    RULE_paralist = 53
    RULE_parameterlist = 54
    RULE_paraprime = 55
    RULE_para = 56
    RULE_typ = 57

    ruleNames =  [ "program", "decllist", "decl", "vardecl", "typdecl", 
                   "varkeydecl", "dynamicdecl", "funcdecl", "arraydecl", 
                   "arrayparameter", "arrayvalue", "arrayval", "arrayvallist", 
                   "listarrayval", "sizelist", "statement", "stmtlist", 
                   "blockstmt", "funccallstmt", "returnstmt", "continuestmt", 
                   "forstmt", "breakstmt", "ifstmt", "eliflist", "elifcomponent", 
                   "assignstmt", "relationaloperator", "logicoperator", 
                   "arithmeticoperator", "expr", "expr1", "expr2", "expr3", 
                   "expr4", "expr5", "expr6", "expr7", "expr8", "subexpr", 
                   "indexoperator", "indexope", "argumentlist", "argumentprime", 
                   "argument", "literal", "booleanvalue", "numbervariable", 
                   "newlinelist", "newlinelistnonull", "lhs", "indexexpr", 
                   "index", "paralist", "parameterlist", "paraprime", "para", 
                   "typ" ]

    EOF = Token.EOF
    COMMENT=1
    RETURN_KEY=2
    VAR_KEY=3
    DYNAMIC_KEY=4
    FUNC_KEY=5
    FOR_KEY=6
    UNTIL_KEY=7
    BY_KEY=8
    BREAK_KEY=9
    CONTINUE_KEY=10
    IF_KEY=11
    ELSE_KEY=12
    ELIF_KEY=13
    BEGIN_KEY=14
    END_KEY=15
    NUM_TYPE=16
    BOOL_TYPE=17
    STRING_TYPE=18
    EQUAL_OPERATOR=19
    CONCAT_OPERATOR=20
    ASSIGN1_OPERATOR=21
    GE_OPERATOR=22
    G_OPERATOR=23
    LE_OPERATOR=24
    L_OPERATOR=25
    NE_OPERATOR=26
    ASSIGN2_OPERATOR=27
    OR_OPERATOR=28
    AND_OPERATOR=29
    NOT_OPERATOR=30
    MODULO_OPERATOR=31
    ADD_OPERATOR=32
    SUB_OPERATOR=33
    MUL_OPERATOR=34
    DIV_OPERATOR=35
    TRUE_BOOLEAN=36
    FALSE_BOOLEAN=37
    LB=38
    RB=39
    LSB=40
    RSB=41
    COMMA=42
    ID=43
    NUMBER=44
    STRINGLIT=45
    UNCLOSE_STRING=46
    ILLEGAL_ESCAPE=47
    NEW_LINE=48
    WS=49
    ERROR_CHAR=50

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def newlinelist(self):
            return self.getTypedRuleContext(ZCodeParser.NewlinelistContext,0)


        def decllist(self):
            return self.getTypedRuleContext(ZCodeParser.DecllistContext,0)


        def EOF(self):
            return self.getToken(ZCodeParser.EOF, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_program




    def program(self):

        localctx = ZCodeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.newlinelist()
            self.state = 117
            self.decllist()
            self.state = 118
            self.match(ZCodeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecllistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(ZCodeParser.DeclContext,0)


        def decllist(self):
            return self.getTypedRuleContext(ZCodeParser.DecllistContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_decllist




    def decllist(self):

        localctx = ZCodeParser.DecllistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decllist)
        try:
            self.state = 124
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.decl()
                self.state = 121
                self.decllist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 123
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(ZCodeParser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(ZCodeParser.FuncdeclContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_decl




    def decl(self):

        localctx = ZCodeParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 128
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 4, 16, 17, 18]:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.vardecl()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.funcdecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typdecl(self):
            return self.getTypedRuleContext(ZCodeParser.TypdeclContext,0)


        def varkeydecl(self):
            return self.getTypedRuleContext(ZCodeParser.VarkeydeclContext,0)


        def dynamicdecl(self):
            return self.getTypedRuleContext(ZCodeParser.DynamicdeclContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_vardecl




    def vardecl(self):

        localctx = ZCodeParser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vardecl)
        try:
            self.state = 133
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [16, 17, 18]:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.typdecl()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 131
                self.varkeydecl()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 3)
                self.state = 132
                self.dynamicdecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typ(self):
            return self.getTypedRuleContext(ZCodeParser.TypContext,0)


        def ID(self):
            return self.getToken(ZCodeParser.ID, 0)

        def ASSIGN1_OPERATOR(self):
            return self.getToken(ZCodeParser.ASSIGN1_OPERATOR, 0)

        def expr(self):
            return self.getTypedRuleContext(ZCodeParser.ExprContext,0)


        def newlinelistnonull(self):
            return self.getTypedRuleContext(ZCodeParser.NewlinelistnonullContext,0)


        def arraydecl(self):
            return self.getTypedRuleContext(ZCodeParser.ArraydeclContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_typdecl




    def typdecl(self):

        localctx = ZCodeParser.TypdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_typdecl)
        try:
            self.state = 146
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                self.typ()
                self.state = 136
                self.match(ZCodeParser.ID)
                self.state = 137
                self.match(ZCodeParser.ASSIGN1_OPERATOR)
                self.state = 138
                self.expr()
                self.state = 139
                self.newlinelistnonull()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 141
                self.typ()
                self.state = 142
                self.match(ZCodeParser.ID)
                self.state = 143
                self.newlinelistnonull()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 145
                self.arraydecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarkeydeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR_KEY(self):
            return self.getToken(ZCodeParser.VAR_KEY, 0)

        def ID(self):
            return self.getToken(ZCodeParser.ID, 0)

        def ASSIGN1_OPERATOR(self):
            return self.getToken(ZCodeParser.ASSIGN1_OPERATOR, 0)

        def expr(self):
            return self.getTypedRuleContext(ZCodeParser.ExprContext,0)


        def newlinelistnonull(self):
            return self.getTypedRuleContext(ZCodeParser.NewlinelistnonullContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_varkeydecl




    def varkeydecl(self):

        localctx = ZCodeParser.VarkeydeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_varkeydecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(ZCodeParser.VAR_KEY)
            self.state = 149
            self.match(ZCodeParser.ID)
            self.state = 150
            self.match(ZCodeParser.ASSIGN1_OPERATOR)
            self.state = 151
            self.expr()
            self.state = 152
            self.newlinelistnonull()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DynamicdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DYNAMIC_KEY(self):
            return self.getToken(ZCodeParser.DYNAMIC_KEY, 0)

        def ID(self):
            return self.getToken(ZCodeParser.ID, 0)

        def newlinelistnonull(self):
            return self.getTypedRuleContext(ZCodeParser.NewlinelistnonullContext,0)


        def ASSIGN1_OPERATOR(self):
            return self.getToken(ZCodeParser.ASSIGN1_OPERATOR, 0)

        def expr(self):
            return self.getTypedRuleContext(ZCodeParser.ExprContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_dynamicdecl




    def dynamicdecl(self):

        localctx = ZCodeParser.DynamicdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_dynamicdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(ZCodeParser.DYNAMIC_KEY)
            self.state = 155
            self.match(ZCodeParser.ID)
            self.state = 158
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==21:
                self.state = 156
                self.match(ZCodeParser.ASSIGN1_OPERATOR)
                self.state = 157
                self.expr()


            self.state = 160
            self.newlinelistnonull()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC_KEY(self):
            return self.getToken(ZCodeParser.FUNC_KEY, 0)

        def ID(self):
            return self.getToken(ZCodeParser.ID, 0)

        def paralist(self):
            return self.getTypedRuleContext(ZCodeParser.ParalistContext,0)


        def newlinelist(self):
            return self.getTypedRuleContext(ZCodeParser.NewlinelistContext,0)


        def returnstmt(self):
            return self.getTypedRuleContext(ZCodeParser.ReturnstmtContext,0)


        def blockstmt(self):
            return self.getTypedRuleContext(ZCodeParser.BlockstmtContext,0)


        def newlinelistnonull(self):
            return self.getTypedRuleContext(ZCodeParser.NewlinelistnonullContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_funcdecl




    def funcdecl(self):

        localctx = ZCodeParser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_funcdecl)
        try:
            self.state = 175
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 162
                self.match(ZCodeParser.FUNC_KEY)
                self.state = 163
                self.match(ZCodeParser.ID)
                self.state = 164
                self.paralist()
                self.state = 165
                self.newlinelist()
                self.state = 168
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [2]:
                    self.state = 166
                    self.returnstmt()
                    pass
                elif token in [14]:
                    self.state = 167
                    self.blockstmt()
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 170
                self.match(ZCodeParser.FUNC_KEY)
                self.state = 171
                self.match(ZCodeParser.ID)
                self.state = 172
                self.paralist()
                self.state = 173
                self.newlinelistnonull()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArraydeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typ(self):
            return self.getTypedRuleContext(ZCodeParser.TypContext,0)


        def ID(self):
            return self.getToken(ZCodeParser.ID, 0)

        def LSB(self):
            return self.getToken(ZCodeParser.LSB, 0)

        def sizelist(self):
            return self.getTypedRuleContext(ZCodeParser.SizelistContext,0)


        def RSB(self):
            return self.getToken(ZCodeParser.RSB, 0)

        def newlinelistnonull(self):
            return self.getTypedRuleContext(ZCodeParser.NewlinelistnonullContext,0)


        def ASSIGN1_OPERATOR(self):
            return self.getToken(ZCodeParser.ASSIGN1_OPERATOR, 0)

        def arrayvalue(self):
            return self.getTypedRuleContext(ZCodeParser.ArrayvalueContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_arraydecl




    def arraydecl(self):

        localctx = ZCodeParser.ArraydeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_arraydecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self.typ()
            self.state = 178
            self.match(ZCodeParser.ID)
            self.state = 179
            self.match(ZCodeParser.LSB)
            self.state = 180
            self.sizelist()
            self.state = 181
            self.match(ZCodeParser.RSB)
            self.state = 184
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==21:
                self.state = 182
                self.match(ZCodeParser.ASSIGN1_OPERATOR)
                self.state = 183
                self.arrayvalue()


            self.state = 186
            self.newlinelistnonull()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayparameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typ(self):
            return self.getTypedRuleContext(ZCodeParser.TypContext,0)


        def ID(self):
            return self.getToken(ZCodeParser.ID, 0)

        def LSB(self):
            return self.getToken(ZCodeParser.LSB, 0)

        def sizelist(self):
            return self.getTypedRuleContext(ZCodeParser.SizelistContext,0)


        def RSB(self):
            return self.getToken(ZCodeParser.RSB, 0)

        def ASSIGN1_OPERATOR(self):
            return self.getToken(ZCodeParser.ASSIGN1_OPERATOR, 0)

        def arrayvalue(self):
            return self.getTypedRuleContext(ZCodeParser.ArrayvalueContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_arrayparameter




    def arrayparameter(self):

        localctx = ZCodeParser.ArrayparameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_arrayparameter)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 188
            self.typ()
            self.state = 189
            self.match(ZCodeParser.ID)
            self.state = 190
            self.match(ZCodeParser.LSB)
            self.state = 191
            self.sizelist()
            self.state = 192
            self.match(ZCodeParser.RSB)
            self.state = 195
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==21:
                self.state = 193
                self.match(ZCodeParser.ASSIGN1_OPERATOR)
                self.state = 194
                self.arrayvalue()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayvalueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arrayval(self):
            return self.getTypedRuleContext(ZCodeParser.ArrayvalContext,0)


        def arrayvallist(self):
            return self.getTypedRuleContext(ZCodeParser.ArrayvallistContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_arrayvalue




    def arrayvalue(self):

        localctx = ZCodeParser.ArrayvalueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_arrayvalue)
        try:
            self.state = 199
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 197
                self.arrayval()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 198
                self.arrayvallist()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayvalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LSB(self):
            return self.getToken(ZCodeParser.LSB, 0)

        def index(self):
            return self.getTypedRuleContext(ZCodeParser.IndexContext,0)


        def RSB(self):
            return self.getToken(ZCodeParser.RSB, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_arrayval




    def arrayval(self):
